--- a/csm/css/custom.css
+++ b/csm/css/custom.css
@@ -1,5 +1,13 @@
 .doubleUnderline {
-    text-decoration:underline;
+    text-decoration: underline;
     border-bottom: 1px solid #000;
     border-bottom-color: inherit;
+}
+
+td.child {
+    text-align: left !important;
+}
+
+.dtr-title {
+    font-weight: bold !important;
 }
