--- a/csm/css/custom.css
+++ b/csm/css/custom.css
@@ -19,3 +19,7 @@ td.child {
 .badge-waring{
     background-color: #ffca00;
 }
+
+.select2-container .select2-selection--single .select2-selection__rendered{
+    display: initial !important;
+}
